BUGFIX: Wrong Image Link

--- a/td/README
+++ b/td/README
@@ -28,4 +28,4 @@ Un SSN est valide si :
 - sa clef de contrôle est valide
 
 
-![alt text](https://github.com/[MoraisSebastien]/[DockerLesson]/tree/tmp/readme/td/imgSSN.jpeg?raw=true)
+![alt text](https://github.com/MoraisSebastien/DockerLesson/tree/tmp/readme/td/imgSSN.jpeg?raw=true)
